--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <div class="user-info">
                     <input type="text" placeholder="Username" />
                     <input type="password" placeholder="Password" />
-                    <button>login</button>                
+                    <div>
+                        <button type="submit">login</button>                
+                    </div>
                 </div>
                 <div class="remember">
                     <input type="checkbox" name="remember-me" id="remember-me" />
